--- a/chat-royale/public/video_overlay.html
+++ b/chat-royale/public/video_overlay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Viewer's Page</title>
+    <title>Viewer Page</title>
 </head>
 <body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
     <div id="app" class="full-height"></div>
