Elimination animation changed
Names of eliminated players are now animated to fade out instead of red strike through, input box also changed to be bordere, migrating css to seperate file

--- a/chat-royale/public/video_overlay.html
+++ b/chat-royale/public/video_overlay.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Viewer Page</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
     <div id="app" class="full-height"></div>
@@ -17,8 +18,7 @@
     <!-- <div id= "content" style="display: none; position: absolute; width: 90%; height: 80%; top:10%; left:5%; padding: 15px; background: blue;"> -->
     <div id= "content" style="display: none; position: absolute; top: 5rem; bottom: 5rem; left: 7rem; right: 7rem; padding: 15px; background: #2036ff; opacity:0.9; color:white">
         <table style="width:100%; font-size:1.5vw;" id="royaleTable"></table>    
-        <input type="text" id="input-box" disabled="disabled" name="ChatRoyale" placeholder="Type Here"
-        style="position: absolute; bottom: 10px; left: 10px;">
+        <input type="text" id="input-box" disabled="disabled" name="ChatRoyale" placeholder="Type Here...">
     </div>
     <div id="list">
     </div>
