--- a/chat-royale/public/hosted/video_overlay.html
+++ b/chat-royale/public/hosted/video_overlay.html
@@ -15,6 +15,7 @@
     <div>
         <!-- <input type="button" id="start" value="Start" style="display:none; position: absolute;"/> -->
         <img src=".\static\tempo-logo-ICON-BLUE.png" alt="start-icon" id="start">
+        <button id="test-button" style="position: absolute; right:0px">Click Me</button>
     </div>
     <!-- <div id= "content" style="display: none; position: absolute; width: 90%; height: 80%; top:10%; left:5%; padding: 15px; background: blue;"> -->
     <div id= "content" style="display: none; position: absolute; top: 5rem; bottom: 5rem; left: 7rem; right: 7rem; padding: 15px; background: #2036ff; opacity:0.9; color:white">
